Fix about buttons alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@ h2 {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .buttons button {
